--- a/bindgen/Cargo.toml
+++ b/bindgen/Cargo.toml
@@ -5,5 +5,4 @@ edition = "2021"
 publish = false
 
 [dependencies]
-memmap2 = "0.9.5"
-windows-bindgen = { git = "https://github.com/microsoft/windows-rs.git", tag = "0.60.0" }
+windows-bindgen = "0.59.0"
