--- a/winui3/Cargo.toml
+++ b/winui3/Cargo.toml
@@ -4,33 +4,79 @@ version = "0.106003.0"
 edition = "2021"
 
 [dependencies]
-windows = { version = "0.58.0", features = [
-    "ApplicationModel_Activation",
-    "ApplicationModel_Background",
-    "ApplicationModel_Contacts",
-    "ApplicationModel_Core",
-    "ApplicationModel_DataTransfer_DragDrop_Core",
-    "Devices_Geolocation",
-    "Devices_Input",
-    "Foundation_Collections",
-    "Foundation_Numerics",
-    "Globalization_NumberFormatting",
-    "Graphics_DirectX",
-    "Graphics_Effects",
-    "Graphics_Imaging",
-    "Graphics_Printing",
-    "Media_Casting",
-    "Media_Playback",
-    "Security_Cryptography_Certificates",
-    "Storage_Streams",
-    "System",
-    "UI_Composition",
-    "UI_Core",
-    "UI_Text",
+windows = { version = "0.59.0", features = [
     "Win32_Security",
     "Win32_Storage_Packaging_Appx",
     "Win32_System_WinRT",
-    "implement"
 ] }
-windows-core = "0.58.0"
-windows-targets = "0.52.6"
+windows-core = "0.59.0"
+windows-targets = "0.53.0"
+
+[features]
+default = []
+ApplicationModel = ["windows/ApplicationModel"]
+ApplicationModel_Activation = ["windows/ApplicationModel_Activation"]
+ApplicationModel_Background = ["windows/ApplicationModel_Background"]
+ApplicationModel_Contacts = ["windows/ApplicationModel_Contacts"]
+ApplicationModel_Core = ["windows/ApplicationModel_Core"]
+ApplicationModel_DataTransfer = ["windows/ApplicationModel_DataTransfer"]
+ApplicationModel_DataTransfer_DragDrop = ["windows/ApplicationModel_DataTransfer_DragDrop"]
+Devices_Geolocation = ["windows/Devices_Geolocation"]
+Foundation = ["windows/Foundation"]
+Foundation_Collections = ["windows/Foundation_Collections"]
+Foundation_Numerics = ["windows/Foundation_Numerics"]
+Globalization = ["windows/Globalization"]
+Globalization_NumberFormatting = ["windows/Globalization_NumberFormatting"]
+Graphics_Effects = ["windows/Graphics_Effects"]
+Graphics_Imaging = ["windows/Graphics_Imaging"]
+Graphics_Printing = ["windows/Graphics_Printing"]
+Media_Casting = ["windows/Media_Casting"]
+Media_Playback = ["windows/Media_Playback"]
+Storage_Streams = ["windows/Storage_Streams"]
+System = ["windows/System"]
+UI_Core = ["windows/UI_Core"]
+# generated features
+Graphics = ["Foundation"]
+Graphics_DirectX = ["Graphics"]
+Graphics_Display = ["Graphics"]
+UI = ["Foundation", "windows/UI"]
+UI_Composition = ["UI", "windows/UI_Composition"]
+UI_Composition_Core = ["UI_Composition"]
+UI_Composition_Diagnostics = ["UI_Composition"]
+UI_Composition_Effects = ["UI_Composition"]
+UI_Composition_Interactions = ["UI_Composition"]
+UI_Composition_Scenes = ["UI_Composition"]
+UI_Composition_SystemBackdrops = ["UI_Composition"]
+UI_Content = ["UI"]
+UI_Dispatching = ["UI"]
+UI_Input = ["UI"]
+UI_Input_DragDrop = ["UI_Input"]
+UI_System = ["UI"]
+UI_Text = ["UI", "windows/UI_Text"]
+UI_Windowing = ["UI"]
+UI_Xaml = ["UI"]
+UI_Xaml_Automation = ["UI_Xaml"]
+UI_Xaml_Automation_Peers = ["UI_Xaml_Automation"]
+UI_Xaml_Automation_Provider = ["UI_Xaml_Automation"]
+UI_Xaml_Automation_Text = ["UI_Xaml_Automation"]
+UI_Xaml_Controls = ["UI_Xaml"]
+UI_Xaml_Controls_AnimatedVisuals = ["UI_Xaml_Controls"]
+UI_Xaml_Controls_Primitives = ["UI_Xaml_Controls"]
+UI_Xaml_Data = ["UI_Xaml"]
+UI_Xaml_Documents = ["UI_Xaml"]
+UI_Xaml_Hosting = ["UI_Xaml"]
+UI_Xaml_Input = ["UI_Xaml"]
+UI_Xaml_Interop = ["UI_Xaml"]
+UI_Xaml_Markup = ["UI_Xaml"]
+UI_Xaml_Media = ["UI_Xaml"]
+UI_Xaml_Media_Animation = ["UI_Xaml_Media"]
+UI_Xaml_Media_Imaging = ["UI_Xaml_Media"]
+UI_Xaml_Media_Media3D = ["UI_Xaml_Media"]
+UI_Xaml_Navigation = ["UI_Xaml"]
+UI_Xaml_Printing = ["UI_Xaml"]
+UI_Xaml_Resources = ["UI_Xaml"]
+UI_Xaml_Shapes = ["UI_Xaml"]
+UI_Xaml_XamlTypeInfo = ["UI_Xaml"]
+Windows = ["Foundation"]
+Windows_ApplicationModel = ["Windows"]
+Windows_ApplicationModel_Resources = ["Windows_ApplicationModel"]
