--- a/winui3/Cargo.toml
+++ b/winui3/Cargo.toml
@@ -1,8 +1,16 @@
 [package]
-name = "winui3"
-version = "0.107.0"
+name = "winio-winui3"
+version = "0.2.1+winui3-1.7"
 edition = "2021"
-rust-version = "1.82"
+description = "WinUI3 bindings (subset) for Rust"
+categories = ["os::windows-apis", "gui"]
+keywords = ["winui", "gui"]
+authors = ["Alovchin91", "Berrysoft <Strawberry_Str@hotmail.com>"]
+license = "MIT"
+repository = "https://github.com/compio-rs/winui3-rs"
+
+[lib]
+name = "winui3"
 
 [dependencies]
 windows-collections.workspace = true
@@ -21,7 +29,7 @@ features = [
 
 [features]
 default = []
-deprecated = []
+native = ["windows/Win32_Graphics_Dxgi"]
 Foundation = ["windows/Foundation"]
 XamlApp = [
     "UI_Xaml",
@@ -29,16 +37,8 @@ XamlApp = [
     "UI_Xaml_Markup",
     "UI_Xaml_XamlTypeInfo",
 ]
-XamlApp_Navigation = [
-    "UI_Composition",
-    "UI_Xaml_Controls",
-    "UI_Xaml_Navigation",
-    "XamlApp",
-]
+XamlApp_Navigation = ["UI_Composition", "UI_Xaml_Controls", "XamlApp"]
 # generated features
-Graphics = ["Foundation"]
-Graphics_DirectX = ["Graphics"]
-Graphics_Display = ["Graphics", "windows/Storage_Streams"]
 UI = ["Foundation", "windows/UI"]
 UI_Composition = [
     "UI",
@@ -46,24 +46,10 @@ UI_Composition = [
     "windows/Graphics_Effects",
     "windows/UI_Composition",
 ]
-UI_Composition_Core = ["UI_Composition"]
-UI_Composition_Diagnostics = ["UI_Composition"]
-UI_Composition_Effects = ["UI_Composition"]
-UI_Composition_Interactions = ["UI_Composition"]
-UI_Composition_Scenes = ["UI_Composition"]
-UI_Composition_SystemBackdrops = ["UI_Composition", "windows/UI_Core"]
-UI_Content = ["UI", "windows/Graphics"]
 UI_Dispatching = ["UI"]
 UI_Input = ["UI", "windows/Graphics", "windows/System", "windows/UI_Core"]
-UI_Input_DragDrop = [
-    "UI_Input",
-    "windows/ApplicationModel_DataTransfer",
-    "windows/Graphics_Imaging",
-]
-UI_Input_Interop = ["UI_Input"]
-UI_System = ["UI"]
 UI_Text = ["UI", "windows/Storage_Streams", "windows/UI_Text"]
-UI_Windowing = ["deprecated", "UI", "windows/Graphics"]
+UI_Windowing = ["UI", "windows/Graphics"]
 UI_Xaml = [
     "UI",
     "UI_Xaml_Interop",
@@ -74,12 +60,7 @@ UI_Xaml = [
     "windows/Graphics_Imaging",
     "windows/UI_Core",
 ]
-UI_Xaml_Automation = ["UI_Xaml"]
-UI_Xaml_Automation_Peers = ["deprecated", "UI_Xaml_Automation"]
-UI_Xaml_Automation_Provider = ["UI_Xaml_Automation"]
-UI_Xaml_Automation_Text = ["UI_Xaml_Automation"]
 UI_Xaml_Controls = [
-    "deprecated",
     "UI_Text",
     "UI_Xaml",
     "windows/ApplicationModel_Contacts",
@@ -88,23 +69,9 @@ UI_Xaml_Controls = [
     "windows/Media_Casting",
     "windows/Media_Playback",
 ]
-UI_Xaml_Controls_AnimatedVisuals = ["UI_Xaml_Controls"]
 UI_Xaml_Controls_Primitives = ["UI_Xaml_Controls"]
-UI_Xaml_Data = ["UI_Xaml"]
-UI_Xaml_Documents = ["UI_Text", "UI_Xaml"]
-UI_Xaml_Hosting = ["UI_Xaml"]
 UI_Xaml_Input = ["UI_Input", "UI_Xaml"]
 UI_Xaml_Interop = []
 UI_Xaml_Markup = ["UI_Xaml", "windows/Storage_Streams"]
 UI_Xaml_Media = ["UI_Xaml", "windows/Storage_Streams"]
-UI_Xaml_Media_Animation = ["UI_Xaml_Media"]
-UI_Xaml_Media_Imaging = ["UI_Xaml_Media", "windows/ApplicationModel_Background"]
-UI_Xaml_Media_Media3D = ["UI_Xaml_Media"]
-UI_Xaml_Navigation = ["UI_Xaml"]
-UI_Xaml_Printing = ["UI_Xaml", "windows/Graphics_Printing"]
-UI_Xaml_Resources = ["UI_Xaml"]
-UI_Xaml_Shapes = ["UI_Xaml"]
 UI_Xaml_XamlTypeInfo = ["UI_Xaml"]
-Windows = ["Foundation"]
-Windows_ApplicationModel = ["Windows"]
-Windows_ApplicationModel_Resources = ["Windows_ApplicationModel"]
