--- a/winui3/Cargo.toml
+++ b/winui3/Cargo.toml
@@ -70,6 +70,7 @@ UI_Input_DragDrop = [
     "windows/ApplicationModel_DataTransfer",
     "windows/Graphics_Imaging",
 ]
+UI_Input_Interop = ["UI_Input"]
 UI_System = ["UI"]
 UI_Text = ["UI", "windows/Storage_Streams", "windows/UI_Text"]
 UI_Windowing = ["deprecated", "UI", "windows/Graphics"]
