--- a/winui3/Cargo.toml
+++ b/winui3/Cargo.toml
@@ -2,6 +2,7 @@
 name = "winui3"
 version = "0.107.0"
 edition = "2021"
+rust-version = "1.82"
 
 [dependencies]
 windows-collections.workspace = true
