--- a/winui3/Cargo.toml
+++ b/winui3/Cargo.toml
@@ -24,6 +24,7 @@ features = [
     "Win32_Security",
     "Win32_Storage_Packaging_Appx",
     "Win32_System_LibraryLoader",
+    "Win32_System_Memory",
     "Win32_System_WinRT",
 ]
 
